--- a/archivos_sass/paginas/_home.scss
+++ b/archivos_sass/paginas/_home.scss
@@ -14,6 +14,8 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+
+  width: 75%;
 }
 
 /* Ancho que aplicás sólo en >= 501px (tablet) y >= 801px (desktop) */
