--- a/archivos_sass/componentes/_carrusell.scss
+++ b/archivos_sass/componentes/_carrusell.scss
@@ -1,14 +1,13 @@
-@use "../variables/variables.scss" as *;
-@use "../variables/mixins.scss" as *;
+@use "../abstracts/variables.scss" as *;
+@use "../abstracts/mixins.scss" as *;
 
 /* Parte fija que pusiste fuera de media queries */
 #carouselExampleDark {
   padding: 2rem;
   background-color: $color-primary;
+   color: $color-footer-text;
 }
 
-/* Parte que aplicás SOLO en >= 801px */
-@include up($bp-desktop) {
   #carouselExampleDark {
     max-width: 70%;
     margin: 2rem auto;
@@ -17,6 +16,6 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    
+    color: $color-footer-text;
+
   }
-}
