--- a/style.css
+++ b/style.css
@@ -145,4 +145,33 @@ body {
   flex-wrap: wrap;
 }
 
+.footer-form {
+  display: block;
+}
+@media (min-width: 801px) {
+  .footer-form {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  }
+}
+
+/* Parte fija que pusiste fuera de media queries */
+#carouselExampleDark {
+  padding: 2rem;
+  background-color: rgb(20, 71, 230);
+  color: #fff;
+}
+
+#carouselExampleDark {
+  max-width: 70%;
+  margin: 2rem auto;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+}
+
 /*# sourceMappingURL=style.css.map */
