cambios en sass y pulido de html

--- a/archivos_sass/layout/_main.scss
+++ b/archivos_sass/layout/_main.scss
@@ -21,3 +21,10 @@
   background-color: $color-primary;
   padding-top: 5rem;
 }
+
+.img-fluid-mov{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 2rem;
+}
