--- a/archivos_sass/layout/_footer.scss
+++ b/archivos_sass/layout/_footer.scss
@@ -66,3 +66,14 @@
   padding: 0.5rem;
 }
 
+#footer-form {
+  display: block; // Mobile first
+}
+
+ @include responsive(801px) {
+    #footer-form{
+       display: flex;
+       flex-direction: row;
+       flex-wrap: wrap;
+        gap: 1rem;}
+  }
