entrega trabajo final proyecto final

--- a/archivos_sass/layout/_main.scss
+++ b/archivos_sass/layout/_main.scss
@@ -29,3 +29,9 @@
   align-items: center;
   padding-top: 2rem;
 }
+
+#conocer-index{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
