--- a/archivos_sass/layout/_footer.scss
+++ b/archivos_sass/layout/_footer.scss
@@ -70,10 +70,12 @@
   display: block; // Mobile first
 }
 
- @include responsive(801px) {
+ @include responsive($min:801px) {
     #footer-form{
        display: flex;
-       flex-direction: row;
+       flex-direction: column;
        flex-wrap: wrap;
-        gap: 1rem;}
+        gap: 0.5rem;
+      width: 70%;
+    height: 70%;}
   }
